refactor: 의존성 주입 패턴 개선 및 객체 생성 최적화
- @Autowired 필드 주입을 @RequiredArgsConstructor 생성자 주입으로 전환
  - ProblemDetailsAuthenticationEntryPoint, ProblemDetailsAccessDeniedHandler
  - OpenApiConfig, SecurityConfig에서 Environment 주입 개선

- 정적 팩토리 메서드 패턴 도입으로 객체 생성 최적화
  - GetBoardQuery.of(), ViewedEvent.of(), LogoutCommand.of() 추가
  - 컨트롤러에서 new 키워드 대신 팩토리 메서드 사용

- 불변 컬렉션 사용으로 메모리 효율성 개선
  - HashSet 생성을 Set.of()로 대체
  - DataInitializer, UserCommandService, LogFormatter에서 적용

- Spring Boot 자동 구성 활용
  - 불필요한 ObjectMapper 빈 정의 제거 (Spring Boot 기본 제공 사용)
  - RedisSessionConfig에서 주입받은 ObjectMapper 사용

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>